ready for deploy

--- a/Lab9/appsettings.json
+++ b/Lab9/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "SongContext": "Server=(localdb)\\mssqllocaldb;Database=Song-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
